--- a/index.html
+++ b/index.html
@@ -682,30 +682,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- contact -->
 	<div id="contact" class="contact all_pad w3agile wow bounceInDown" data-wow-duration="1s" data-wow-delay="0s">
 		<div class="container">
-			<h3 class="title">Contact
+			<h3 class="title">Контакти
 				<span></span>
 			</h3>
 			<p class="para">Cras in risus vitae leo feugiat lobortis euismod quis dui. Integer tempor urna quis quam volutpat, non consequat augue
 				iaculis. Proin malesuada sem sagittis imperdiet rutrum. </p>
 			<div class="col-md-7 contact-left">
-				<h4>Keep In Touch</h4>
-				<form action="#" method="post">
-					<div class="form-left">
-						<input type="text" value="Name" name="Name" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='Name';}">
-					</div>
-					<div class="form-right">
-						<input type="email address" value="Email" name="Email" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='Email';}">
-					</div>
-					<div class="clearfix"></div>
-					<input type="text" value="Subject" name="Subject" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='Subject';}">
-					<textarea name="Message" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message';}" required="">Message</textarea>
-					<input type="submit" value="Send">
-				</form>
+				<h4>Запазете Час</h4>
 				<div class="footer-grids">
 					<div class="col-sm-4 footer-one">
 						<i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>
-						<p>+1234 567 890
-							<span>+1234 567 890</span>
+						<p>0888 978 098
+							<span>0888 978 098</span>
 						</p>
 
 					</div>
@@ -720,8 +708,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="col-sm-4 footer-one">
 						<i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>
-						<p>12K Street, 45 Building Road
-							<span>New York City.</span>
+						<p>Спортен Център Славия Спортес, ул.”Коломан” 1, район Овча Купел
+							<span>гр.София.</span>
 						</p>
 					</div>
 					<div class="clearfix"></div>
@@ -730,7 +718,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="col-md-5 contact-right">
 				<div class="map-grid">
 					<h4>View On Map</h4>
-					<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d2482.432383990807!2d0.028213999961443994!3d51.52362882484525!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1423469959819"
+					<iframe src="https://www.google.bg/maps?f=q&source=embed&hl=bg&geocode&q=%D1%83%D0%BB%D0%B8%D1%86%D0%B0+%E2%80%9E%D0%9A%D0%BE%D0%BB%D0%BE%D0%BC%D0%B0%D0%BD%E2%80%9C+1,+%D0%A1%D0%BE%D1%84%D0%B8%D1%8F&aq=0&oq=%D1%83%D0%BB&sll=42.638893,23.323947&sspn=0.31671,0.617294&ie=UTF8&hq&hnear=%D1%83%D0%BB%D0%B8%D1%86%D0%B0+%E2%80%9E%D0%9A%D0%BE%D0%BB%D0%BE%D0%BC%D0%B0%D0%BD%E2%80%9C+1,+1618+%D0%A1%D0%BE%D1%84%D0%B8%D1%8F&t=m&z=14&ll=42.677338,23.271724"
 					    style="border:0"></iframe>
 				</div>
 				<div class="map-grid">
@@ -747,8 +735,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				</div>
 				<div class="map-grid">
-					<h2>Our Main Branch</h2>
-					<h5>Angel Spa</h5>
+					<h2>Лице за Контакти</h2>
+					<h5>Емил Велинов</h5>
 					<p>4116 Oak Avenue
 						<span>Chicago, IL 60607</span>
 					</p>
