--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html>
 
 <head>
-	<title>Релакс Масажи - Емил Велинов</title>
+	<title>Emilis 
+		Massage</title>
 	<!-- for-mobile-apps -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -133,8 +134,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="grid__item color-3">
 								<h1>
 									<a class="link link--nukun" href="index.html">
-										<span>Е</span>мил
-										<span>В</span>елинов
+										<span>E</span>milis
+										<span>M</span>assages
 										<i>Релакс, Възстановяване и Спортни Масажи</i>
 									</a>
 								</h1>
@@ -177,9 +178,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<ul class="rslides" id="slider3">
 						<li>
 							<div class="banner-text">
-								<h3>Емил Велинов</h3>
+								<h3>Emilis Massage</h3>
 								<h4>Релакс, Възстановяване и Спортни Масажи</h4>
-								<p>Бла бла бла бла бла. Бла бла бла бла бла.Бла бла бла бла бла.Бла бла бла бла бла.</p>
+								<p>Добре дошли в център за масажи 'Славия Спортес'. За вашето здраве , красота и добър тонус ние ви предлагаме 
+голямо разнообразие от масажи и процедури за тяло. Комплекса разполага със сауна , парна баня и зона за релакс , което може да бъде съчетано за още по-добри резултати .
+</p>
 								<div class="clearfix"></div>
 							</div>
 						</li>
