--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html>
 
 <head>
-	<title>Emilis 
-		Massage</title>
+	<title>Emilis Massage</title>
 	<!-- for-mobile-apps -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -135,8 +134,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<h1>
 									<a class="link link--nukun" href="index.html">
 										<span>E</span>milis
-										<span>M</span>assages
-										<i>Релакс, Възстановяване и Спортни Масажи</i>
+										<span>M</span>assage
+										<i>Релакс, Красота и Възстановяване</i>
 									</a>
 								</h1>
 							</div>
@@ -179,7 +178,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li>
 							<div class="banner-text">
 								<h3>Emilis Massage</h3>
-								<h4>Релакс, Възстановяване и Спортни Масажи</h4>
+								<h4>Релакс, Красота и Възстановяване</h4>
 								<p>Добре дошли в център за масажи 'Славия Спортес'. За вашето здраве , красота и добър тонус ние ви предлагаме 
 голямо разнообразие от масажи и процедури за тяло. Комплекса разполага със сауна , парна баня и зона за релакс , което може да бъде съчетано за още по-добри резултати .
 </p>
@@ -188,9 +187,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</li>
 						<li>
 							<div class="banner-text">
-								<h3>Емил Велинов</h3>
-								<h4>Релакс, Възстановяване и Спортни Масажи</h4>
-								<p>Бла бла бла бла бла. Бла бла бла бла бла.Бла бла бла бла бла.Бла бла бла бла бла.</p>
+								<h3>Emilis Massage</h3>
+								<h4>Релакс, Красота и Възстановяване</h4>
+								<p>Добре дошли в център за масажи 'Славия Спортес'. За вашето здраве , красота и добър тонус ние ви предлагаме 
+голямо разнообразие от масажи и процедури за тяло. Комплекса разполага със сауна , парна баня и зона за релакс , което може да бъде съчетано за още по-добри резултати .
+</p>
 								<div class="clearfix"></div>
 							</div>
 						</li>
