--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="pets-info-slid">
 											<h4>Запазете Час</h4>
 											<span class="strip_line"></span>
-											<p>Вашето здраве е най-важно, отдайте се на насладата от един професионален масаж</p>
+											<p>Вашето здраве е най-важнo! Подарети си насладата от един професионален масаж</p>
 											<span class="strip_line"></span>
 										</div>
 									</div>
@@ -247,7 +247,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="pets-info-slid">
 											<h4>Запазете Час</h4>
 											<span class="strip_line"></span>
-											<p>Вашето здраве е най-важно, отдайте се на насладата от един професионален масаж</p>
+											<p>Вашето здраве е най-важнo! Подарети си насладата от един професионален масаж</p>
 											<span class="strip_line"></span>
 										</div>
 									</div>
@@ -270,7 +270,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="pets-info-slid">
 											<h4>Запазете Час</h4>
 											<span class="strip_line"></span>
-											<p>Вашето здраве е най-важно, отдайте се на насладата от един професионален масаж</p>
+											<p>Вашето здраве е най-важнo! Подарети си насладата от един професионален масаж</p>
 											<span class="strip_line"></span>
 										</div>
 									</div>
@@ -293,7 +293,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="pets-info-slid">
 											<h4>Запазете Час</h4>
 											<span class="strip_line"></span>
-											<p>Вашето здраве е най-важно, отдайте се на насладата от един професионален масаж</p>
+											<p>Вашето здраве е най-важнo! Подарети си насладата от един професионален масаж</p>
 											<span class="strip_line"></span>
 										</div>
 									</div>
@@ -316,7 +316,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="pets-info-slid">
 											<h4>Запазете Час</h4>
 											<span class="strip_line"></span>
-											<p>Вашето здраве е най-важно, отдайте се на насладата от един професионален масаж</p>
+											<p>Вашето здраве е най-важнo! Подарети си насладата от един професионален масаж</p>
 											<span class="strip_line"></span>
 										</div>
 									</div>
@@ -453,7 +453,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 				<div class="col-md-4 ser-grid wow flipInY" data-wow-duration="1.5s" data-wow-delay="0s">
 					<div class="con-left text-center">
-						<h5>Антицелулитена Процедура с Кафе</h5>
+						<h5>Антицелулитна Процедура с Кафе</h5>
 						<p>Продължителност: <b>50 мин.</b></p>
 						<p>Цена: <b>40 лв.</b></p>
 					</div>
@@ -461,7 +461,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 				<div class="col-md-4 ser-grid wow flipInY" data-wow-duration="1.5s" data-wow-delay="0s">
 					<div class="con-left text-center">
-						<h5>Антицелулитена Процедура Липоснел</h5>
+						<h5>Антицелулитна Процедура Липоснел</h5>
 						<p>Продължителност: <b>50 мин.</b></p>
 						<p>Цена: <b>40 лв.</b></p>
 					</div>
